# codingame

./: .gitignore  LICENSE  README.md
Benchmark/: run.bat  theGame.cs-0.00.txt
FunGameAi/: .gitignore  FunGameAi.sln
FunGameAi/APackman/: APackman.csproj  AStarUtil.cs  BehTree.cs  Cell.cs  CellFlags.cs  ConsoleWriter.cs  Context.cs  GameInput.cs  InflMap.cs  Input.txt  Map.cs  Pac.cs  Path.cs  Point.cs  Program.cs  Simulator.cs  TrafficLight.cs
FunGameAi/APackman/Model/: Cell.cs  (+8 more)
FunGameAi/APackmanDebug/: APackmanDebug.csproj  App.xaml  App.xaml.cs  CGOutputProcessor.cs  Data.txt  DataStates.txt  Drawer.cs  GraphicsExt.cs  HeatMap.cs  MainWindow.xaml  MainWindow.xaml.cs  SerialReader.cs  SimulatorWnd.xaml  SimulatorWnd.xaml.cs
FunGameAi/CdsGame/: CdsGame.csproj  Context.cs  Node.cs  Player.cs  Pod.cs  Program.cs  VectorExt.cs
FunGameAi/Cry/: Context.cs  Cry.csproj  CryField.cs  CryMapExtensions.cs  CryModel.cs  EnemyTracker.cs  Program.cs  Utils.cs
FunGameAi/Cry2/: Cry2.csproj  Point.cs  Program.cs
FunGameAi/PlatinumRift2/: AStar.cs  Asset.cs  Context.cs  GameInput.cs  GridNode.cs  Input.txt  Node.cs  Path.cs  PlatinumRift2.csproj  Program.cs  Squad.cs  Utils.cs
FunGameAi/PowerOfThor/: PowerOfThor.csproj  Program.cs
FunGameAi/Practice/: ArrayTest.cs  GraphTest.cs  PlayerLanding.cs  PlayerPanic.cs  Practice.csproj  Program.cs  ShadowsOfTheKnight.cs
FunGameAi/Publisher/: Program.cs  Publisher.csproj
FunRust/CryRust/: Cargo.toml
FunRust/PacRust/: Cargo.toml  game_input.txt
FunRust/PacRust/src/: main.rs
LifeC/: .gitignore
LifeC/LifeC/: LifeC.sln
(+58 files in other folders)
