[package]
name = "pac_rust"
version = "0.1.0"
authors = ["m.gukov <m.gukov@plarium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"


[[bin]]
name = "display"
[dependencies]
image = "0.21"
imageproc = "0.18"